--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Bitter|Staatliches");
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700");
 
 * {
    padding: 0;
@@ -6,34 +7,51 @@
    box-sizing: border-box;
 }
 
+*::selection {
+   background: #4b219b;
+   color: #fff;
+}
+
 body {
-   font-family: "Bitter", serif;
+   /* font-family: "Bitter", serif; */
    /* font-family: "Staatliches", cursive; */
+   font-family: "Source Sans Pro", sans-serif;
    font-weight: 400;
    font-size: 16px;
+   background: #000;
 }
 
 .container {
-   width: 80%;
-   max-width: 1200px;
-   margin: auto;
+   border: 20px solid #000;
+   border-left: 15px solid #000;
+   border-right: 15px solid #000;
+   border-bottom: 15px solid #000;
+   width: 100%;
+   background: #fff;
+   /* max-width: 1200px; */
+   margin: 0 auto;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
+   height: 100%;
+   padding: 100px 50px;
 }
 
 .container .title {
    text-align: center;
    font-size: 2rem;
-   letter-spacing: 10px;
-   margin-top: -50px;
+   letter-spacing: 3px;
+   /* margin-top: -50px; */
+   border-bottom: 2px solid rgb(0, 0, 0);
+   padding-bottom: 25px;
 }
 
 .container .projects h2 {
    text-align: center;
    font-size: 2rem;
    margin: 50px 0;
+   text-transform: uppercase;
 }
 
 .container .projects ul {
