--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css?family=Bitter|Staatliches");
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700");
+@import url('https://fonts.googleapis.com/css?family=Bitter|Staatliches');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700');
 
 * {
    padding: 0;
@@ -15,7 +15,7 @@
 body {
    /* font-family: "Bitter", serif; */
    /* font-family: "Staatliches", cursive; */
-   font-family: "Source Sans Pro", sans-serif;
+   font-family: 'Source Sans Pro', sans-serif;
    font-weight: 400;
    font-size: 16px;
    background: #000;
