--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ body {
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
-   height: 100%;
+   /* height: 100%; */
    padding: 100px 50px;
 }
 
