--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,10 @@ body {
   font-size: 1.6rem;
   font-family: sans-serif;
   overflow-x: hidden;
-  background: #191919;
+}
+
+.on-load {
+  overflow: hidden;
 }
 
 .container {
@@ -28,7 +31,7 @@ body {
 .loader {
   width: 100%;
   height: 100vh;
-  background: #000;
+  background: #191919;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -39,7 +42,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   position: absolute;
-  opacity: 0;
+  opacity: 1;
   -webkit-transition: opacity 0.3s ease-in-out;
   transition: opacity 0.3s ease-in-out;
 }
@@ -52,8 +55,8 @@ body {
 .loader-circle {
   height: 20rem;
   width: 20rem;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(40%, #fff), color-stop(70%, #ddd), to(#fff));
-  background: linear-gradient(#fff 40%, #ddd 70%, #fff 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(40%, #fff), color-stop(70%, #f7f119), to(#fff));
+  background: linear-gradient(#fff 40%, #f7f119 70%, #fff 100%);
   border-radius: 50%;
   position: relative;
   display: -webkit-box;
@@ -72,7 +75,7 @@ body {
   position: absolute;
   height: 17rem;
   width: 17rem;
-  background: #000;
+  background: #191919;
   border-radius: 50%;
   z-index: 10;
 }
@@ -88,8 +91,8 @@ body {
 .loader-blur {
   height: 20rem;
   width: 20rem;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(40%, #fff), color-stop(70%, #ddd), to(#fff));
-  background: linear-gradient(#fff 40%, #ddd 70%, #fff 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(40%, #fff), color-stop(70%, #f7f119), to(#fff));
+  background: linear-gradient(#fff 40%, #f7f119 70%, #fff 100%);
   position: absolute;
   border-radius: 50%;
   -webkit-animation: rotate 1000ms infinite alternate;
@@ -140,6 +143,13 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  background: #191919;
+}
+
+@media only screen and (max-width: 420px) {
+  .bio {
+    padding: 0 2.5rem;
+  }
 }
 
 .bio__img {
@@ -201,6 +211,150 @@ body {
   background: #fff;
   color: #191919;
   border-color: currentColor;
+}
+
+.main {
+  background: #dfdfdf;
+  width: 100%;
+  min-height: 100vh;
+  padding: 5rem;
+}
+
+@media only screen and (max-width: 420px) {
+  .main {
+    padding: 5rem 2.5rem;
+  }
+}
+
+.main .title {
+  text-align: center;
+  margin-bottom: 5rem;
+  font-size: 4rem;
+}
+
+.main .cards-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(30rem, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  grid-gap: 2rem;
+  grid-row-gap: 4rem;
+}
+
+@media only screen and (max-width: 420px) {
+  .main .cards-container {
+    -ms-grid-columns: (minmax(20rem, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  }
+}
+
+.main .card {
+  width: 100%;
+  background: #fff;
+  border: 3px solid #191919;
+}
+
+.main .card__img img {
+  width: 100%;
+  display: block;
+  height: 100%;
+}
+
+.main .card__title {
+  text-align: center;
+  padding: 2.5rem 0;
+}
+
+.main .card__description {
+  padding: 0 2.5rem;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  height: 10rem;
+  overflow-y: scroll;
+}
+
+.main .card__description-text {
+  line-height: 2.5rem;
+}
+
+.main .card__btns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 2.5rem;
+  padding: 0 2.5rem 2.5rem;
+}
+
+@media only screen and (max-width: 420px) {
+  .main .card__btns {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.main .card__btn {
+  text-decoration: none;
+  padding: 1rem 2.5rem;
+  border-radius: 3px;
+}
+
+@media only screen and (max-width: 420px) {
+  .main .card__btn {
+    width: 100%;
+    text-align: center;
+    margin-top: 1.5rem;
+  }
+}
+
+.main .card__btn--white {
+  color: #191919;
+  border: 1px solid currentColor;
+  -webkit-transition-property: color, background;
+  transition-property: color, background;
+  -webkit-transition: 0.3s ease-in;
+  transition: 0.3s ease-in;
+}
+
+.main .card__btn--white:hover {
+  color: #fff;
+  background: #191919;
+}
+
+.main .card__btn--dark {
+  color: #fff;
+  border: 1px solid currentColor;
+  background: #191919;
+}
+
+.footer {
+  background: #191919;
+  padding: 2.5rem;
+}
+
+.footer .copy,
+.footer a {
+  color: #fff;
+  text-align: center;
+  text-decoration: none;
+}
+
+@media only screen and (max-width: 420px) {
+  .footer .copy,
+  .footer a {
+    font-size: 1.6rem;
+  }
+}
+
+.footer a:hover {
+  color: #e6e6e6;
 }
 
 @-webkit-keyframes rotate {
