--- a/sass/style.scss
+++ b/sass/style.scss
@@ -283,6 +283,42 @@ body {
     @media only screen and (max-width: 420px) {
       flex-direction: column;
       align-items: stretch;
+      position: sticky;
+      left: 0;
+      top: 50%;
+    }
+
+    &__list {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      list-style: none;
+
+      @media only screen and (max-width: 420px) {
+        flex-direction: column;
+        align-items: stretch;
+        text-align: center;
+      }
+
+      li {
+        margin: 0 1rem;
+
+        @media only screen and (max-width: 420px) {
+          margin: 0.5rem 0;
+        }
+        a {
+          color: $white;
+          padding: 1rem 2rem;
+          display: block;
+          background: $light-black;
+          text-decoration: none;
+          border-radius: 3px;
+
+          &:hover {
+            background: darken($light-black, 25%);
+          }
+        }
+      }
     }
   }
   .prevBtn,
